--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web",
+  "name": "test",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,39 +9,19 @@
   "author": "Ladislav Sedlacek",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.14.3",
-    "@babel/plugin-transform-strict-mode": "^7.18.6",
-    "@babel/preset-env": "^7.14.2",
-    "autoprefixer": "^9.8.6",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^9.1.2",
-    "babel-plugin-transform-remove-strict-mode": "0.0.2",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "cssnano": "^4.1.10",
-    "grunt": "^1.2.1",
-    "grunt-autoprefixer": "^3.0.4",
-    "grunt-babel": "^8.0.0",
-    "grunt-clean": "^0.4.0",
-    "grunt-contrib-clean": "^2.0.1",
-    "grunt-contrib-imagemin": "^4.0.0",
-    "grunt-contrib-sass": "^1.0.0",
-    "grunt-contrib-uglify": "^5.0.0",
-    "grunt-contrib-watch": "^1.1.0",
-    "grunt-cssnano": "^3.0.0",
-    "grunt-cwebp": "^3.0.3",
-    "grunt-image": "^6.3.1",
-    "grunt-pngquant": "^0.1.8",
-    "grunt-svg-sprite": "^1.5.0",
-    "grunt-svgstore": "^2.0.0",
-    "grunt-webp": "0.0.4",
-    "jit-grunt": "^0.10.0"
-  },
-  "dependencies": {
-    "core-js": "^3.27.1",
-    "g": "^2.0.1",
-    "grunt-postcss": "^0.9.0",
-    "pixrem": "^5.0.0"
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^8.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-imagemin": "^7.1.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^5.1.0",
+    "gulp-svgmin": "^4.1.0",
+    "gulp-svgstore": "^9.0.0",
+    "gulp-terser": "^2.1.0",
+    "gulp-webp": "^4.0.1",
+    "imagemin-mozjpeg": "^7.0.0",
+    "imagemin-pngquant": "^9.0.2",
+    "sass": "^1.66.1"
   }
 }
